# Apple-App-Store-review-insights

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/app/: config.py  exceptions.py  logging.py  main.py
api/app/api/: deps.py
api/app/api/v1/: reviews.py  router.py
api/app/models/: domain.py  schemas.py
api/app/services/: fetcher.py  insights.py  metrics.py
api/app/storage/: repository.py
api/scripts/: compare_preprocessing.py  compare_sentiment_models.py  run_insights.py  smoke_fetcher.py
api/tests/: conftest.py
api/tests/fixtures/: sample_reviews.json
api/tests/integration/: test_health.py  test_insights_slow.py  test_reviews_api.py
api/tests/unit/: test_fetcher.py  test_insights.py  test_metrics.py  test_stream_heartbeat.py
sample_report/: README.md  report.md  ui-guide.md
sample_report/raw_data_example/: collect.json  insights.json  metrics.json  reviews.csv  reviews.json
web/: Dockerfile  firebase.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts  generated.ts  types.ts
web/src/components/: AppHeader.tsx  AppSearchForm.tsx  InsightsList.tsx  MetricsSummary.tsx  ReviewTable.tsx  SelectedReviewCard.tsx  StageList.tsx  ThemeToggle.tsx  TopKeywords.tsx
web/src/components/charts/: RatingDistribution.tsx  ReviewMap.tsx  SentimentBreakdown.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx
web/src/hooks/: useCollectStream.ts  useReviewData.ts
web/src/lib/: dates.ts  recentApps.ts  theme.tsx
web/src/pages/: DashboardPage.tsx  HomePage.tsx
web/src/styles/: globals.css
web/src/test/: setup.ts
web/src/test/components/: InsightsList.test.tsx  MetricsSummary.test.tsx
