[project]
name = "apple-reviews-api"
version = "0.1.0"
description = "REST API for Apple App Store review analysis (collection, metrics, LLM-driven insights)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=24.4",
    "tenacity>=9.0",
    "aiosqlite>=0.20",
    "appstorescraperpy>=0.1.2",
    "transformers>=4.46",
    "torch>=2.5",
    "sentence-transformers>=3.3",
    "bertopic>=0.16.4",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async best practices
]
ignore = ["E501"]  # line length is enforced by formatter

[tool.ruff.format]
quote-style = "double"

# ── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["appstorescraper.*", "bertopic.*", "sklearn.*", "umap.*", "hdbscan.*"]
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -m 'not slow'"
markers = [
    "slow: tests that load real ML models or hit network (skipped by default; run with -m slow)",
]
filterwarnings = [
    "error",
    # umap warns at import if TensorFlow is missing - we don't use ParametricUMAP.
    "ignore::ImportWarning:umap",
    # huggingface_hub uses a deprecated hf_xet entrypoint internally; we don't call it.
    "ignore::DeprecationWarning:huggingface_hub.file_download",
    # transformers / torch internal deprecations are noisy and out of our control.
    "ignore::DeprecationWarning:transformers",
    "ignore::DeprecationWarning:torch",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
